admin and vendor category management